# api/models/auth.go
@@ -1,0 +1,6 @@
+package models
+
+type CustomerLoginRequest struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
